# kabu-agent

./: .env.example  .gitignore  PROJECT_STRUCTURE_SUMMARY.md  README.md  pyproject.toml
config/: base.yaml  env.dev.yaml  env.prod.yaml  logging.yaml
reports/: template.xlsx
src/: app.py  config_loader.py
src/ai/: feedback.py  news_summary.py
src/excel/: writer.py
src/excel/charts/: donut.py  kpi.py  treemap.py
src/excel/sheets/: ai_news.py  dashboard.py  holdings.py  timeline.py
src/utils/: dates.py  io.py  logger.py
