[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-portfolio-reporter"
version = "0.1.0"
description = "엑셀 기반 포트폴리오 리포트 생성기 - 차트, 시트, AI 프롬프트 최적화"
authors = [
    {name = "dlatth", email = "dlat.th45@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # TODO: 필요한 의존성 추가
]

[project.optional-dependencies]
dev = [
    # TODO: 개발용 의존성 추가
]

[project.scripts]
excel-report = "app:main"

[project.urls]
Homepage = "https://github.com/ryokushaka/kabu-python.git"
Repository = "https://github.com/ryokushaka/kabu-python.git"
Issues = "https://github.com/ryokushaka/kabu-python.git/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]